[gd_scene load_steps=5 format=3 uid="uid://47ho2w737128"]

[ext_resource type="Script" uid="uid://blj8edpobtlrf" path="res://simple-fps-controller/simple_fps_controller.gd" id="1_4y12u"]

[sub_resource type="Curve" id="Curve_reqrf"]
_data = [Vector2(0, 0), 0.0, 1.4, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wfw5p"]
radius = 0.3
height = 1.6

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_d8b51"]
radius = 0.3
height = 1.0

[node name="SimpleFpsController" type="CharacterBody3D"]
collision_layer = 2
floor_constant_speed = true
script = ExtResource("1_4y12u")
acceleration_curve = SubResource("Curve_reqrf")

[node name="StandingCollision" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
shape = SubResource("CapsuleShape3D_wfw5p")

[node name="FPSCamera" type="Camera3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)

[node name="CrouchingCollision" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CapsuleShape3D_d8b51")
disabled = true

[node name="StandCam" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)

[node name="CrouchCam" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)

[node name="CrouchRoofCast" type="RayCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, 0)
enabled = false
target_position = Vector3(0, 0.8, 0)

[node name="CoyoteTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
